--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/chrome": "0.0.125",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-table": "^7.0.28",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^5.0.0",
@@ -39,6 +40,7 @@
     "react-dom": "^16.14.0",
     "react-hot-loader": "^4.13.0",
     "react-scripts": "^4.0.3",
+    "react-table": "^7.6.3",
     "swr": "^0.4.2"
   }
 }
