--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hot-loader": "^4.13.0",
     "react-icons": "^4.2.0",
     "react-scripts": "^4.0.3",
+    "react-switch": "^6.0.0",
     "react-table": "^7.6.3",
     "swr": "^0.4.2"
   }
