--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "chrome-extension-react-typescript-boilerplate",
-  "version": "1.0.0",
+  "name": "cointrack",
+  "version": "0.1.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run test:coverage && npm run test:watch",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --watch=false --coverage",
     "build": "webpack",
     "start": "webpack --watch",
     "prepare": "husky install"
@@ -11,20 +13,25 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@hot-loader/react-dom": "^17.0.0-rc.2",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@types/chrome": "0.0.125",
+    "@types/jest": "^26.0.21",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-table": "^7.0.28",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^5.0.0",
     "dotenv-webpack": "^7.0.1",
     "file-loader": "^6.1.1",
     "husky": "^5.1.3",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.9",
     "prettier": "2.2.1",
     "pretty-quick": "^3.1.0",
@@ -50,5 +57,10 @@
     "react-scripts": "^4.0.3",
     "react-table": "^7.6.3",
     "swr": "^0.4.2"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTest.ts"
+    ]
   }
 }
