--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@hot-loader/react-dom": "^17.0.0-rc.2",
+    "@testing-library/dom": "^7.30.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^13.0.2",
     "@types/chrome": "0.0.125",
     "@types/jest": "^26.0.21",
     "@types/react": "^16.9.53",
@@ -32,6 +34,7 @@
     "file-loader": "^6.1.1",
     "husky": "^5.1.3",
     "jest": "^26.6.3",
+    "jest-chrome": "^0.7.0",
     "mini-css-extract-plugin": "^1.3.9",
     "prettier": "2.2.1",
     "pretty-quick": "^3.1.0",
