--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^26.6.3",
     "jest-chrome": "^0.7.0",
     "mini-css-extract-plugin": "^1.3.9",
+    "msw": "^0.28.0",
     "prettier": "2.2.1",
     "pretty-quick": "^3.1.0",
     "sass": "^1.32.8",
